--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: app_api
 description: A package to use api
 version: 0.0.2
-homepage: https://uvstudio.fun/
+homepage: https://github.com/ali-you
 repository: https://github.com/ali-you/app-api-package.git
 documentation: https://github.com/ali-you/app-api-package
 issue_tracker: https://github.com/ali-you/app-api-package/issues
